<resources>
    <string name="app_name">Filmku</string>
    <string name="daftar_film">DAFTAR FILM</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_login">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now!</string>
    <string name="username">Username</string>
    <string name="username_example_com">username@example.com</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="register_register">Register</string>
    <string name="judul_film">Judul FIlm</string>
    <string name="release_film">Release FIlm</string>
    <string name="profile">Profile</string>
    <string name="logo">Logo</string>
    <string name="favorite">Favorite Film</string>
</resources>