<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfilActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_centerVertical="true"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_person"
            android:contentDescription="Logo" />

        <TextView
            android:id="@+id/profilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/profilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/username_example_com"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/logout"/>

    </LinearLayout>

</RelativeLayout>