<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f0f0f0"
    tools:context=".view.LoginActivity"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/login"
        android:textColor="#333333"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/djinggo"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:contentDescription="Logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_below="@id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawablePadding="20dp"
            android:textColorHint="#999999"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="#333333" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_below="@id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:endIconTint="#999999"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"

        app:boxStrokeWidth="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="#999999"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="#333333"
            app:boxStrokeWidth="0dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_below="@id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_login"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvRegisterNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerInParent="true"
        android:text="@string/don_t_have_an_account_register_now" />


</RelativeLayout>
